funding-db.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: funding-db
spec:
  selector:
    matchLabels:
      app: mysql-funding
  serviceName: "mysql"    # 연결할 서비스의 이름
  replicas: 1           # 파드 기동 개수
  template:
    metadata:
      labels:
        app: mysql-funding
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args:
          - "--character-set-server=utf8mb4"
          - "--collation-server=utf8mb4_unicode_ci"
          - "--init-connect=SET NAMES utf8mb4"
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-vol
          mountPath: /var/lib/mysql
          subPath: data
        livenessProbe:
          exec:
            command: ["sh", "-c", "mysqladmin ping -p$MYSQL_ROOT_PASSWORD"]
          initialDelaySeconds: 60
          timeoutSeconds: 10
      volumes:
      - name: mysql-vol
        persistentVolumeClaim:
          claimName: mysql-funding-pvc


---

apiVersion: v1
kind: Service
metadata: 
  name: mysql-funding      # k8s안의 DNS명
  labels:
    app: mysql-funding
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None    # 헤드리스 서비스 설정
  selector:
    app: mysql-funding   # 스테이트풀셋과 연결하는 라벨
