funding.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: funding
  labels:
    app: funding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: funding
  template:
    metadata:
      labels:
        app: funding
    spec:
      containers:
      - name: funding
        image: limyeeun/cloudcomputing-yorijori:2.6
        ports:
        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: funding-service
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: funding
