ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yorijori-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
    - host: yorijori.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: image-service
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /funding
            pathType: Prefix
            backend:
              service:
                name: funding-service
                port:
                  number: 3001
          - path: /joinfundingPage
            pathType: Prefix
            backend:
              service:
                name: funding-service
                port:
                  number: 3001  
          - path: /createfundingPage
            pathType: Prefix
            backend:
              service:
                name: funding-service
                port:
                  number: 3001
          - path: /write
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          - path: /user-api
            pathType: Prefix
            backend:
              service:
                name: community
                port:
                  number: 3000
          
          # - path: /css
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: community
          #       port:
          #         number: 3000
          - path: /css/authCss
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /css/fundingCss
            pathType: Prefix
            backend:
              service:
                name: funding-service
                port:
                  number: 3001
        
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: funding-service
                port:
                  number: 3001
